fix bgv pron disappear problem and copy icon broken in mobile width

--- a/player/styles/style.css
+++ b/player/styles/style.css
@@ -3,10 +3,6 @@ body {
     font-family: system-ui;
 }
 
-.lyric-phrase {
-    background-image: linear-gradient(to right, #fff 0, #aaa 0);
-}
-
 .lyric-button.active {
     .lyric-phrase {
         -webkit-background-clip: text;
